add fonts and config

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* 
+
 @font-face {
     font-family: 'poppins-medium';
     src: url('./src/assets/fonts/Poppins-Medium.ttf') format('truetype'),
@@ -42,4 +42,4 @@
 @font-face {
     font-family: 'rubikmono';
     src: url('./src/assets/fonts/RubikMonoOne-Regular.ttf') format('truetype'),
-  } */
+  }
